# sns-server

./: .flake8  .gitignore  README.md  developer.md  pre_commit_check.py  pyproject.toml
sns_server/: __main__.py  server.py
tests/: cl_utils.py  test_server.py
